--- a/weld/subsystem/pom.xml
+++ b/weld/subsystem/pom.xml
@@ -73,6 +73,11 @@
       </dependency>
 
       <dependency>
+         <groupId>org.wildfly.bridge</groupId>
+         <artifactId>cdi-api-bridge</artifactId>
+      </dependency>
+
+      <dependency>
          <groupId>org.jboss.metadata</groupId>
          <artifactId>jboss-metadata-web</artifactId>
       </dependency>
